parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ARROW
    BACKTICK
    BREAK
    CASE
    CONSTRUCTOR
    DEFAULT
    DOLLAR
    FOR
    INTERFACE
    PIPE
    PRIVATE
    PROTECTED
    PUBLIC
    QUESTION
    SWITCH
    THIS
    TYPE
    TYPEOF
    VOID
    WHILE

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement
Rule 3     statement_list -> statement statement_list
Rule 4     statement -> assignment SEMICOLON
Rule 5     statement -> expression SEMICOLON
Rule 6     statement -> if_statement
Rule 7     statement -> function_def
Rule 8     statement -> return_statement
Rule 9     statement -> class_declaration
Rule 10    assignment -> LET IDENTIFIER EQUALS value
Rule 11    assignment -> LET IDENTIFIER COLON data_type EQUALS value
Rule 12    assignment -> LET IDENTIFIER COLON data_type
Rule 13    assignment -> CONST IDENTIFIER EQUALS value
Rule 14    assignment -> CONST IDENTIFIER COLON data_type EQUALS value
Rule 15    assignment -> VAR IDENTIFIER EQUALS value
Rule 16    assignment -> VAR IDENTIFIER COLON data_type EQUALS value
Rule 17    assignment -> VAR IDENTIFIER COLON data_type
Rule 18    assignment -> IDENTIFIER EQUALS value
Rule 19    data_type -> STRING_TYPE
Rule 20    data_type -> NUMBER_TYPE
Rule 21    data_type -> BOOLEAN_TYPE
Rule 22    data_type -> CHAR_TYPE
Rule 23    data_type -> array_type
Rule 24    data_type -> object_type_literal
Rule 25    value -> STRING
Rule 26    value -> CHARACTER
Rule 27    value -> array
Rule 28    value -> object_literal
Rule 29    value -> arithmetic_expression
Rule 30    value -> logical_expression
Rule 31    value -> expression
Rule 32    array_type -> NUMBER_TYPE LBRACKET RBRACKET
Rule 33    array_type -> STRING_TYPE LBRACKET RBRACKET
Rule 34    array_type -> BOOLEAN_TYPE LBRACKET RBRACKET
Rule 35    array_type -> ANY LBRACKET RBRACKET
Rule 36    array -> LBRACKET RBRACKET
Rule 37    array -> LBRACKET element_list RBRACKET
Rule 38    element_list -> value
Rule 39    element_list -> value COMMA element_list
Rule 40    object_type_literal -> LBRACE property_list RBRACE
Rule 41    object_type_literal -> LBRACE RBRACE
Rule 42    object_literal -> LBRACE property_assignment_list RBRACE
Rule 43    object_literal -> LBRACE RBRACE
Rule 44    property -> IDENTIFIER COLON data_type
Rule 45    property_assignment_list -> property_assignment
Rule 46    property_assignment_list -> property_assignment COMMA property_assignment_list
Rule 47    property_assignment -> IDENTIFIER COLON value
Rule 48    property_assignment -> STRING COLON value
Rule 49    property_list -> property
Rule 50    property_list -> property SEMICOLON property_list
Rule 51    arithmetic_expression -> arithmetic_expression PLUS term
Rule 52    arithmetic_expression -> arithmetic_expression MINUS term
Rule 53    arithmetic_expression -> term
Rule 54    term -> term TIMES factor
Rule 55    term -> term DIVIDE factor
Rule 56    term -> term MODULE factor
Rule 57    term -> factor
Rule 58    factor -> atom POWER factor
Rule 59    factor -> atom
Rule 60    atom -> NUMBER
Rule 61    atom -> IDENTIFIER
Rule 62    atom -> LPAREN arithmetic_expression RPAREN
Rule 63    logical_expression -> logical_expression AND logical_term
Rule 64    logical_expression -> logical_expression OR logical_term
Rule 65    logical_expression -> logical_term
Rule 66    logical_term -> NOT logical_factor
Rule 67    logical_term -> logical_factor
Rule 68    logical_factor -> comparison_expression
Rule 69    logical_factor -> IDENTIFIER
Rule 70    logical_factor -> TRUE
Rule 71    logical_factor -> FALSE
Rule 72    logical_factor -> LPAREN logical_expression RPAREN
Rule 73    comparison_expression -> arithmetic_expression EQEQ arithmetic_expression
Rule 74    comparison_expression -> arithmetic_expression NOTEQ arithmetic_expression
Rule 75    comparison_expression -> arithmetic_expression GT arithmetic_expression
Rule 76    comparison_expression -> arithmetic_expression LT arithmetic_expression
Rule 77    comparison_expression -> arithmetic_expression GE arithmetic_expression
Rule 78    comparison_expression -> arithmetic_expression LE arithmetic_expression
Rule 79    expression -> expression DOT IDENTIFIER
Rule 80    expression -> IDENTIFIER DOT IDENTIFIER
Rule 81    expression -> IDENTIFIER LPAREN RPAREN
Rule 82    expression -> IDENTIFIER LPAREN argument_list RPAREN
Rule 83    argument_list -> expression
Rule 84    argument_list -> expression COMMA argument_list
Rule 85    class_declaration -> CLASS IDENTIFIER LBRACE class_body RBRACE
Rule 86    class_body -> class_member_list
Rule 87    class_body -> empty
Rule 88    class_member_list -> class_member
Rule 89    class_member_list -> class_member class_member_list
Rule 90    class_member -> assignment
Rule 91    class_member -> function_def
Rule 92    class_member -> property
Rule 93    empty -> <empty>
Rule 94    function_def -> FUNCTION IDENTIFIER LPAREN RPAREN statement_block
Rule 95    function_def -> FUNCTION IDENTIFIER LPAREN param_list RPAREN statement_block
Rule 96    param_list -> IDENTIFIER
Rule 97    param_list -> IDENTIFIER COMMA param_list
Rule 98    return_statement -> RETURN expression SEMICOLON
Rule 99    statement_block -> LBRACE statement_list RBRACE
Rule 100   statement_block -> statement
Rule 101   if_statement -> IF LPAREN logical_expression RPAREN statement_block
Rule 102   if_statement -> IF LPAREN logical_expression RPAREN statement_block ELSE statement_block

Terminals, with rules where they appear

AND                  : 63
ANY                  : 35
ARROW                : 
BACKTICK             : 
BOOLEAN_TYPE         : 21 34
BREAK                : 
CASE                 : 
CHARACTER            : 26
CHAR_TYPE            : 22
CLASS                : 85
COLON                : 11 12 14 16 17 44 47 48
COMMA                : 39 46 84 97
CONST                : 13 14
CONSTRUCTOR          : 
DEFAULT              : 
DIVIDE               : 55
DOLLAR               : 
DOT                  : 79 80
ELSE                 : 102
EQEQ                 : 73
EQUALS               : 10 11 13 14 15 16 18
FALSE                : 71
FOR                  : 
FUNCTION             : 94 95
GE                   : 77
GT                   : 75
IDENTIFIER           : 10 11 12 13 14 15 16 17 18 44 47 61 69 79 80 80 81 82 85 94 95 96 97
IF                   : 101 102
INTERFACE            : 
LBRACE               : 40 41 42 43 85 99
LBRACKET             : 32 33 34 35 36 37
LE                   : 78
LET                  : 10 11 12
LPAREN               : 62 72 81 82 94 95 101 102
LT                   : 76
MINUS                : 52
MODULE               : 56
NOT                  : 66
NOTEQ                : 74
NUMBER               : 60
NUMBER_TYPE          : 20 32
OR                   : 64
PIPE                 : 
PLUS                 : 51
POWER                : 58
PRIVATE              : 
PROTECTED            : 
PUBLIC               : 
QUESTION             : 
RBRACE               : 40 41 42 43 85 99
RBRACKET             : 32 33 34 35 36 37
RETURN               : 98
RPAREN               : 62 72 81 82 94 95 101 102
SEMICOLON            : 4 5 50 98
STRING               : 25 48
STRING_TYPE          : 19 33
SWITCH               : 
THIS                 : 
TIMES                : 54
TRUE                 : 70
TYPE                 : 
TYPEOF               : 
VAR                  : 15 16 17
VOID                 : 
WHILE                : 
error                : 

Nonterminals, with rules where they appear

argument_list        : 82 84
arithmetic_expression : 29 51 52 62 73 73 74 74 75 75 76 76 77 77 78 78
array                : 27
array_type           : 23
assignment           : 4 90
atom                 : 58 59
class_body           : 85
class_declaration    : 9
class_member         : 88 89
class_member_list    : 86 89
comparison_expression : 68
data_type            : 11 12 14 16 17 44
element_list         : 37 39
empty                : 87
expression           : 5 31 79 83 84 98
factor               : 54 55 56 57 58
function_def         : 7 91
if_statement         : 6
logical_expression   : 30 63 64 72 101 102
logical_factor       : 66 67
logical_term         : 63 64 65
object_literal       : 28
object_type_literal  : 24
param_list           : 95 97
program              : 0
property             : 49 50 92
property_assignment  : 45 46
property_assignment_list : 42 46
property_list        : 40 50
return_statement     : 8
statement            : 2 3 100
statement_block      : 94 95 101 102 102
statement_list       : 1 3 99
term                 : 51 52 53 54 55 56
value                : 10 11 13 14 15 16 18 38 39 47 48

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement
    (3) statement_list -> . statement statement_list
    (4) statement -> . assignment SEMICOLON
    (5) statement -> . expression SEMICOLON
    (6) statement -> . if_statement
    (7) statement -> . function_def
    (8) statement -> . return_statement
    (9) statement -> . class_declaration
    (10) assignment -> . LET IDENTIFIER EQUALS value
    (11) assignment -> . LET IDENTIFIER COLON data_type EQUALS value
    (12) assignment -> . LET IDENTIFIER COLON data_type
    (13) assignment -> . CONST IDENTIFIER EQUALS value
    (14) assignment -> . CONST IDENTIFIER COLON data_type EQUALS value
    (15) assignment -> . VAR IDENTIFIER EQUALS value
    (16) assignment -> . VAR IDENTIFIER COLON data_type EQUALS value
    (17) assignment -> . VAR IDENTIFIER COLON data_type
    (18) assignment -> . IDENTIFIER EQUALS value
    (79) expression -> . expression DOT IDENTIFIER
    (80) expression -> . IDENTIFIER DOT IDENTIFIER
    (81) expression -> . IDENTIFIER LPAREN RPAREN
    (82) expression -> . IDENTIFIER LPAREN argument_list RPAREN
    (101) if_statement -> . IF LPAREN logical_expression RPAREN statement_block
    (102) if_statement -> . IF LPAREN logical_expression RPAREN statement_block ELSE statement_block
    (94) function_def -> . FUNCTION IDENTIFIER LPAREN RPAREN statement_block
    (95) function_def -> . FUNCTION IDENTIFIER LPAREN param_list RPAREN statement_block
    (98) return_statement -> . RETURN expression SEMICOLON
    (85) class_declaration -> . CLASS IDENTIFIER LBRACE class_body RBRACE

    LET             shift and go to state 10
    CONST           shift and go to state 12
    VAR             shift and go to state 13
    IDENTIFIER      shift and go to state 11
    IF              shift and go to state 14
    FUNCTION        shift and go to state 15
    RETURN          shift and go to state 16
    CLASS           shift and go to state 17

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    assignment                     shift and go to state 4
    expression                     shift and go to state 5
    if_statement                   shift and go to state 6
    function_def                   shift and go to state 7
    return_statement               shift and go to state 8
    class_declaration              shift and go to state 9

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .

    $end            reduce using rule 1 (program -> statement_list .)


state 3

    (2) statement_list -> statement .
    (3) statement_list -> statement . statement_list
    (2) statement_list -> . statement
    (3) statement_list -> . statement statement_list
    (4) statement -> . assignment SEMICOLON
    (5) statement -> . expression SEMICOLON
    (6) statement -> . if_statement
    (7) statement -> . function_def
    (8) statement -> . return_statement
    (9) statement -> . class_declaration
    (10) assignment -> . LET IDENTIFIER EQUALS value
    (11) assignment -> . LET IDENTIFIER COLON data_type EQUALS value
    (12) assignment -> . LET IDENTIFIER COLON data_type
    (13) assignment -> . CONST IDENTIFIER EQUALS value
    (14) assignment -> . CONST IDENTIFIER COLON data_type EQUALS value
    (15) assignment -> . VAR IDENTIFIER EQUALS value
    (16) assignment -> . VAR IDENTIFIER COLON data_type EQUALS value
    (17) assignment -> . VAR IDENTIFIER COLON data_type
    (18) assignment -> . IDENTIFIER EQUALS value
    (79) expression -> . expression DOT IDENTIFIER
    (80) expression -> . IDENTIFIER DOT IDENTIFIER
    (81) expression -> . IDENTIFIER LPAREN RPAREN
    (82) expression -> . IDENTIFIER LPAREN argument_list RPAREN
    (101) if_statement -> . IF LPAREN logical_expression RPAREN statement_block
    (102) if_statement -> . IF LPAREN logical_expression RPAREN statement_block ELSE statement_block
    (94) function_def -> . FUNCTION IDENTIFIER LPAREN RPAREN statement_block
    (95) function_def -> . FUNCTION IDENTIFIER LPAREN param_list RPAREN statement_block
    (98) return_statement -> . RETURN expression SEMICOLON
    (85) class_declaration -> . CLASS IDENTIFIER LBRACE class_body RBRACE

    $end            reduce using rule 2 (statement_list -> statement .)
    RBRACE          reduce using rule 2 (statement_list -> statement .)
    LET             shift and go to state 10
    CONST           shift and go to state 12
    VAR             shift and go to state 13
    IDENTIFIER      shift and go to state 11
    IF              shift and go to state 14
    FUNCTION        shift and go to state 15
    RETURN          shift and go to state 16
    CLASS           shift and go to state 17

    statement                      shift and go to state 3
    statement_list                 shift and go to state 18
    assignment                     shift and go to state 4
    expression                     shift and go to state 5
    if_statement                   shift and go to state 6
    function_def                   shift and go to state 7
    return_statement               shift and go to state 8
    class_declaration              shift and go to state 9

state 4

    (4) statement -> assignment . SEMICOLON

    SEMICOLON       shift and go to state 19


state 5

    (5) statement -> expression . SEMICOLON
    (79) expression -> expression . DOT IDENTIFIER

    SEMICOLON       shift and go to state 20
    DOT             shift and go to state 21


state 6

    (6) statement -> if_statement .

    LET             reduce using rule 6 (statement -> if_statement .)
    CONST           reduce using rule 6 (statement -> if_statement .)
    VAR             reduce using rule 6 (statement -> if_statement .)
    IDENTIFIER      reduce using rule 6 (statement -> if_statement .)
    IF              reduce using rule 6 (statement -> if_statement .)
    FUNCTION        reduce using rule 6 (statement -> if_statement .)
    RETURN          reduce using rule 6 (statement -> if_statement .)
    CLASS           reduce using rule 6 (statement -> if_statement .)
    $end            reduce using rule 6 (statement -> if_statement .)
    RBRACE          reduce using rule 6 (statement -> if_statement .)
    ELSE            reduce using rule 6 (statement -> if_statement .)


state 7

    (7) statement -> function_def .

    LET             reduce using rule 7 (statement -> function_def .)
    CONST           reduce using rule 7 (statement -> function_def .)
    VAR             reduce using rule 7 (statement -> function_def .)
    IDENTIFIER      reduce using rule 7 (statement -> function_def .)
    IF              reduce using rule 7 (statement -> function_def .)
    FUNCTION        reduce using rule 7 (statement -> function_def .)
    RETURN          reduce using rule 7 (statement -> function_def .)
    CLASS           reduce using rule 7 (statement -> function_def .)
    $end            reduce using rule 7 (statement -> function_def .)
    RBRACE          reduce using rule 7 (statement -> function_def .)
    ELSE            reduce using rule 7 (statement -> function_def .)


state 8

    (8) statement -> return_statement .

    LET             reduce using rule 8 (statement -> return_statement .)
    CONST           reduce using rule 8 (statement -> return_statement .)
    VAR             reduce using rule 8 (statement -> return_statement .)
    IDENTIFIER      reduce using rule 8 (statement -> return_statement .)
    IF              reduce using rule 8 (statement -> return_statement .)
    FUNCTION        reduce using rule 8 (statement -> return_statement .)
    RETURN          reduce using rule 8 (statement -> return_statement .)
    CLASS           reduce using rule 8 (statement -> return_statement .)
    $end            reduce using rule 8 (statement -> return_statement .)
    RBRACE          reduce using rule 8 (statement -> return_statement .)
    ELSE            reduce using rule 8 (statement -> return_statement .)


state 9

    (9) statement -> class_declaration .

    LET             reduce using rule 9 (statement -> class_declaration .)
    CONST           reduce using rule 9 (statement -> class_declaration .)
    VAR             reduce using rule 9 (statement -> class_declaration .)
    IDENTIFIER      reduce using rule 9 (statement -> class_declaration .)
    IF              reduce using rule 9 (statement -> class_declaration .)
    FUNCTION        reduce using rule 9 (statement -> class_declaration .)
    RETURN          reduce using rule 9 (statement -> class_declaration .)
    CLASS           reduce using rule 9 (statement -> class_declaration .)
    $end            reduce using rule 9 (statement -> class_declaration .)
    RBRACE          reduce using rule 9 (statement -> class_declaration .)
    ELSE            reduce using rule 9 (statement -> class_declaration .)


state 10

    (10) assignment -> LET . IDENTIFIER EQUALS value
    (11) assignment -> LET . IDENTIFIER COLON data_type EQUALS value
    (12) assignment -> LET . IDENTIFIER COLON data_type

    IDENTIFIER      shift and go to state 22


state 11

    (18) assignment -> IDENTIFIER . EQUALS value
    (80) expression -> IDENTIFIER . DOT IDENTIFIER
    (81) expression -> IDENTIFIER . LPAREN RPAREN
    (82) expression -> IDENTIFIER . LPAREN argument_list RPAREN

    EQUALS          shift and go to state 23
    DOT             shift and go to state 24
    LPAREN          shift and go to state 25


state 12

    (13) assignment -> CONST . IDENTIFIER EQUALS value
    (14) assignment -> CONST . IDENTIFIER COLON data_type EQUALS value

    IDENTIFIER      shift and go to state 26


state 13

    (15) assignment -> VAR . IDENTIFIER EQUALS value
    (16) assignment -> VAR . IDENTIFIER COLON data_type EQUALS value
    (17) assignment -> VAR . IDENTIFIER COLON data_type

    IDENTIFIER      shift and go to state 27


state 14

    (101) if_statement -> IF . LPAREN logical_expression RPAREN statement_block
    (102) if_statement -> IF . LPAREN logical_expression RPAREN statement_block ELSE statement_block

    LPAREN          shift and go to state 28


state 15

    (94) function_def -> FUNCTION . IDENTIFIER LPAREN RPAREN statement_block
    (95) function_def -> FUNCTION . IDENTIFIER LPAREN param_list RPAREN statement_block

    IDENTIFIER      shift and go to state 29


state 16

    (98) return_statement -> RETURN . expression SEMICOLON
    (79) expression -> . expression DOT IDENTIFIER
    (80) expression -> . IDENTIFIER DOT IDENTIFIER
    (81) expression -> . IDENTIFIER LPAREN RPAREN
    (82) expression -> . IDENTIFIER LPAREN argument_list RPAREN

    IDENTIFIER      shift and go to state 31

    expression                     shift and go to state 30

state 17

    (85) class_declaration -> CLASS . IDENTIFIER LBRACE class_body RBRACE

    IDENTIFIER      shift and go to state 32


state 18

    (3) statement_list -> statement statement_list .

    $end            reduce using rule 3 (statement_list -> statement statement_list .)
    RBRACE          reduce using rule 3 (statement_list -> statement statement_list .)


state 19

    (4) statement -> assignment SEMICOLON .

    LET             reduce using rule 4 (statement -> assignment SEMICOLON .)
    CONST           reduce using rule 4 (statement -> assignment SEMICOLON .)
    VAR             reduce using rule 4 (statement -> assignment SEMICOLON .)
    IDENTIFIER      reduce using rule 4 (statement -> assignment SEMICOLON .)
    IF              reduce using rule 4 (statement -> assignment SEMICOLON .)
    FUNCTION        reduce using rule 4 (statement -> assignment SEMICOLON .)
    RETURN          reduce using rule 4 (statement -> assignment SEMICOLON .)
    CLASS           reduce using rule 4 (statement -> assignment SEMICOLON .)
    $end            reduce using rule 4 (statement -> assignment SEMICOLON .)
    RBRACE          reduce using rule 4 (statement -> assignment SEMICOLON .)
    ELSE            reduce using rule 4 (statement -> assignment SEMICOLON .)


state 20

    (5) statement -> expression SEMICOLON .

    LET             reduce using rule 5 (statement -> expression SEMICOLON .)
    CONST           reduce using rule 5 (statement -> expression SEMICOLON .)
    VAR             reduce using rule 5 (statement -> expression SEMICOLON .)
    IDENTIFIER      reduce using rule 5 (statement -> expression SEMICOLON .)
    IF              reduce using rule 5 (statement -> expression SEMICOLON .)
    FUNCTION        reduce using rule 5 (statement -> expression SEMICOLON .)
    RETURN          reduce using rule 5 (statement -> expression SEMICOLON .)
    CLASS           reduce using rule 5 (statement -> expression SEMICOLON .)
    $end            reduce using rule 5 (statement -> expression SEMICOLON .)
    RBRACE          reduce using rule 5 (statement -> expression SEMICOLON .)
    ELSE            reduce using rule 5 (statement -> expression SEMICOLON .)


state 21

    (79) expression -> expression DOT . IDENTIFIER

    IDENTIFIER      shift and go to state 33


state 22

    (10) assignment -> LET IDENTIFIER . EQUALS value
    (11) assignment -> LET IDENTIFIER . COLON data_type EQUALS value
    (12) assignment -> LET IDENTIFIER . COLON data_type

    EQUALS          shift and go to state 34
    COLON           shift and go to state 35


state 23

    (18) assignment -> IDENTIFIER EQUALS . value
    (25) value -> . STRING
    (26) value -> . CHARACTER
    (27) value -> . array
    (28) value -> . object_literal
    (29) value -> . arithmetic_expression
    (30) value -> . logical_expression
    (31) value -> . expression
    (36) array -> . LBRACKET RBRACKET
    (37) array -> . LBRACKET element_list RBRACKET
    (42) object_literal -> . LBRACE property_assignment_list RBRACE
    (43) object_literal -> . LBRACE RBRACE
    (51) arithmetic_expression -> . arithmetic_expression PLUS term
    (52) arithmetic_expression -> . arithmetic_expression MINUS term
    (53) arithmetic_expression -> . term
    (63) logical_expression -> . logical_expression AND logical_term
    (64) logical_expression -> . logical_expression OR logical_term
    (65) logical_expression -> . logical_term
    (79) expression -> . expression DOT IDENTIFIER
    (80) expression -> . IDENTIFIER DOT IDENTIFIER
    (81) expression -> . IDENTIFIER LPAREN RPAREN
    (82) expression -> . IDENTIFIER LPAREN argument_list RPAREN
    (54) term -> . term TIMES factor
    (55) term -> . term DIVIDE factor
    (56) term -> . term MODULE factor
    (57) term -> . factor
    (66) logical_term -> . NOT logical_factor
    (67) logical_term -> . logical_factor
    (58) factor -> . atom POWER factor
    (59) factor -> . atom
    (68) logical_factor -> . comparison_expression
    (69) logical_factor -> . IDENTIFIER
    (70) logical_factor -> . TRUE
    (71) logical_factor -> . FALSE
    (72) logical_factor -> . LPAREN logical_expression RPAREN
    (60) atom -> . NUMBER
    (61) atom -> . IDENTIFIER
    (62) atom -> . LPAREN arithmetic_expression RPAREN
    (73) comparison_expression -> . arithmetic_expression EQEQ arithmetic_expression
    (74) comparison_expression -> . arithmetic_expression NOTEQ arithmetic_expression
    (75) comparison_expression -> . arithmetic_expression GT arithmetic_expression
    (76) comparison_expression -> . arithmetic_expression LT arithmetic_expression
    (77) comparison_expression -> . arithmetic_expression GE arithmetic_expression
    (78) comparison_expression -> . arithmetic_expression LE arithmetic_expression

    STRING          shift and go to state 38
    CHARACTER       shift and go to state 39
    LBRACKET        shift and go to state 45
    LBRACE          shift and go to state 46
    IDENTIFIER      shift and go to state 36
    NOT             shift and go to state 51
    TRUE            shift and go to state 55
    FALSE           shift and go to state 56
    LPAREN          shift and go to state 49
    NUMBER          shift and go to state 57

    value                          shift and go to state 37
    array                          shift and go to state 40
    object_literal                 shift and go to state 41
    arithmetic_expression          shift and go to state 42
    logical_expression             shift and go to state 43
    expression                     shift and go to state 44
    term                           shift and go to state 47
    logical_term                   shift and go to state 48
    factor                         shift and go to state 50
    logical_factor                 shift and go to state 52
    atom                           shift and go to state 53
    comparison_expression          shift and go to state 54

state 24

    (80) expression -> IDENTIFIER DOT . IDENTIFIER

    IDENTIFIER      shift and go to state 58


state 25

    (81) expression -> IDENTIFIER LPAREN . RPAREN
    (82) expression -> IDENTIFIER LPAREN . argument_list RPAREN
    (83) argument_list -> . expression
    (84) argument_list -> . expression COMMA argument_list
    (79) expression -> . expression DOT IDENTIFIER
    (80) expression -> . IDENTIFIER DOT IDENTIFIER
    (81) expression -> . IDENTIFIER LPAREN RPAREN
    (82) expression -> . IDENTIFIER LPAREN argument_list RPAREN

    RPAREN          shift and go to state 59
    IDENTIFIER      shift and go to state 31

    argument_list                  shift and go to state 60
    expression                     shift and go to state 61

state 26

    (13) assignment -> CONST IDENTIFIER . EQUALS value
    (14) assignment -> CONST IDENTIFIER . COLON data_type EQUALS value

    EQUALS          shift and go to state 62
    COLON           shift and go to state 63


state 27

    (15) assignment -> VAR IDENTIFIER . EQUALS value
    (16) assignment -> VAR IDENTIFIER . COLON data_type EQUALS value
    (17) assignment -> VAR IDENTIFIER . COLON data_type

    EQUALS          shift and go to state 64
    COLON           shift and go to state 65


state 28

    (101) if_statement -> IF LPAREN . logical_expression RPAREN statement_block
    (102) if_statement -> IF LPAREN . logical_expression RPAREN statement_block ELSE statement_block
    (63) logical_expression -> . logical_expression AND logical_term
    (64) logical_expression -> . logical_expression OR logical_term
    (65) logical_expression -> . logical_term
    (66) logical_term -> . NOT logical_factor
    (67) logical_term -> . logical_factor
    (68) logical_factor -> . comparison_expression
    (69) logical_factor -> . IDENTIFIER
    (70) logical_factor -> . TRUE
    (71) logical_factor -> . FALSE
    (72) logical_factor -> . LPAREN logical_expression RPAREN
    (73) comparison_expression -> . arithmetic_expression EQEQ arithmetic_expression
    (74) comparison_expression -> . arithmetic_expression NOTEQ arithmetic_expression
    (75) comparison_expression -> . arithmetic_expression GT arithmetic_expression
    (76) comparison_expression -> . arithmetic_expression LT arithmetic_expression
    (77) comparison_expression -> . arithmetic_expression GE arithmetic_expression
    (78) comparison_expression -> . arithmetic_expression LE arithmetic_expression
    (51) arithmetic_expression -> . arithmetic_expression PLUS term
    (52) arithmetic_expression -> . arithmetic_expression MINUS term
    (53) arithmetic_expression -> . term
    (54) term -> . term TIMES factor
    (55) term -> . term DIVIDE factor
    (56) term -> . term MODULE factor
    (57) term -> . factor
    (58) factor -> . atom POWER factor
    (59) factor -> . atom
    (60) atom -> . NUMBER
    (61) atom -> . IDENTIFIER
    (62) atom -> . LPAREN arithmetic_expression RPAREN

    NOT             shift and go to state 51
    IDENTIFIER      shift and go to state 67
    TRUE            shift and go to state 55
    FALSE           shift and go to state 56
    LPAREN          shift and go to state 49
    NUMBER          shift and go to state 57

    logical_expression             shift and go to state 66
    logical_term                   shift and go to state 48
    logical_factor                 shift and go to state 52
    comparison_expression          shift and go to state 54
    arithmetic_expression          shift and go to state 68
    term                           shift and go to state 47
    factor                         shift and go to state 50
    atom                           shift and go to state 53

state 29

    (94) function_def -> FUNCTION IDENTIFIER . LPAREN RPAREN statement_block
    (95) function_def -> FUNCTION IDENTIFIER . LPAREN param_list RPAREN statement_block

    LPAREN          shift and go to state 69


state 30

    (98) return_statement -> RETURN expression . SEMICOLON
    (79) expression -> expression . DOT IDENTIFIER

    SEMICOLON       shift and go to state 70
    DOT             shift and go to state 21


state 31

    (80) expression -> IDENTIFIER . DOT IDENTIFIER
    (81) expression -> IDENTIFIER . LPAREN RPAREN
    (82) expression -> IDENTIFIER . LPAREN argument_list RPAREN

    DOT             shift and go to state 24
    LPAREN          shift and go to state 25


state 32

    (85) class_declaration -> CLASS IDENTIFIER . LBRACE class_body RBRACE

    LBRACE          shift and go to state 71


state 33

    (79) expression -> expression DOT IDENTIFIER .

    SEMICOLON       reduce using rule 79 (expression -> expression DOT IDENTIFIER .)
    DOT             reduce using rule 79 (expression -> expression DOT IDENTIFIER .)
    LET             reduce using rule 79 (expression -> expression DOT IDENTIFIER .)
    CONST           reduce using rule 79 (expression -> expression DOT IDENTIFIER .)
    VAR             reduce using rule 79 (expression -> expression DOT IDENTIFIER .)
    IDENTIFIER      reduce using rule 79 (expression -> expression DOT IDENTIFIER .)
    FUNCTION        reduce using rule 79 (expression -> expression DOT IDENTIFIER .)
    RBRACE          reduce using rule 79 (expression -> expression DOT IDENTIFIER .)
    COMMA           reduce using rule 79 (expression -> expression DOT IDENTIFIER .)
    RPAREN          reduce using rule 79 (expression -> expression DOT IDENTIFIER .)
    RBRACKET        reduce using rule 79 (expression -> expression DOT IDENTIFIER .)


state 34

    (10) assignment -> LET IDENTIFIER EQUALS . value
    (25) value -> . STRING
    (26) value -> . CHARACTER
    (27) value -> . array
    (28) value -> . object_literal
    (29) value -> . arithmetic_expression
    (30) value -> . logical_expression
    (31) value -> . expression
    (36) array -> . LBRACKET RBRACKET
    (37) array -> . LBRACKET element_list RBRACKET
    (42) object_literal -> . LBRACE property_assignment_list RBRACE
    (43) object_literal -> . LBRACE RBRACE
    (51) arithmetic_expression -> . arithmetic_expression PLUS term
    (52) arithmetic_expression -> . arithmetic_expression MINUS term
    (53) arithmetic_expression -> . term
    (63) logical_expression -> . logical_expression AND logical_term
    (64) logical_expression -> . logical_expression OR logical_term
    (65) logical_expression -> . logical_term
    (79) expression -> . expression DOT IDENTIFIER
    (80) expression -> . IDENTIFIER DOT IDENTIFIER
    (81) expression -> . IDENTIFIER LPAREN RPAREN
    (82) expression -> . IDENTIFIER LPAREN argument_list RPAREN
    (54) term -> . term TIMES factor
    (55) term -> . term DIVIDE factor
    (56) term -> . term MODULE factor
    (57) term -> . factor
    (66) logical_term -> . NOT logical_factor
    (67) logical_term -> . logical_factor
    (58) factor -> . atom POWER factor
    (59) factor -> . atom
    (68) logical_factor -> . comparison_expression
    (69) logical_factor -> . IDENTIFIER
    (70) logical_factor -> . TRUE
    (71) logical_factor -> . FALSE
    (72) logical_factor -> . LPAREN logical_expression RPAREN
    (60) atom -> . NUMBER
    (61) atom -> . IDENTIFIER
    (62) atom -> . LPAREN arithmetic_expression RPAREN
    (73) comparison_expression -> . arithmetic_expression EQEQ arithmetic_expression
    (74) comparison_expression -> . arithmetic_expression NOTEQ arithmetic_expression
    (75) comparison_expression -> . arithmetic_expression GT arithmetic_expression
    (76) comparison_expression -> . arithmetic_expression LT arithmetic_expression
    (77) comparison_expression -> . arithmetic_expression GE arithmetic_expression
    (78) comparison_expression -> . arithmetic_expression LE arithmetic_expression

    STRING          shift and go to state 38
    CHARACTER       shift and go to state 39
    LBRACKET        shift and go to state 45
    LBRACE          shift and go to state 46
    IDENTIFIER      shift and go to state 36
    NOT             shift and go to state 51
    TRUE            shift and go to state 55
    FALSE           shift and go to state 56
    LPAREN          shift and go to state 49
    NUMBER          shift and go to state 57

    value                          shift and go to state 72
    array                          shift and go to state 40
    object_literal                 shift and go to state 41
    arithmetic_expression          shift and go to state 42
    logical_expression             shift and go to state 43
    expression                     shift and go to state 44
    term                           shift and go to state 47
    logical_term                   shift and go to state 48
    factor                         shift and go to state 50
    logical_factor                 shift and go to state 52
    atom                           shift and go to state 53
    comparison_expression          shift and go to state 54

state 35

    (11) assignment -> LET IDENTIFIER COLON . data_type EQUALS value
    (12) assignment -> LET IDENTIFIER COLON . data_type
    (19) data_type -> . STRING_TYPE
    (20) data_type -> . NUMBER_TYPE
    (21) data_type -> . BOOLEAN_TYPE
    (22) data_type -> . CHAR_TYPE
    (23) data_type -> . array_type
    (24) data_type -> . object_type_literal
    (32) array_type -> . NUMBER_TYPE LBRACKET RBRACKET
    (33) array_type -> . STRING_TYPE LBRACKET RBRACKET
    (34) array_type -> . BOOLEAN_TYPE LBRACKET RBRACKET
    (35) array_type -> . ANY LBRACKET RBRACKET
    (40) object_type_literal -> . LBRACE property_list RBRACE
    (41) object_type_literal -> . LBRACE RBRACE
